Add Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,18 @@
 {
     "version": 2,
-    "builds": [
-      { "src": "api/**/*.js", "use": "@vercel/node" }
-    ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/api/$1" }
+      {
+        "src": "/(.*)",
+        "dest": "/index.html"
+      }
+    ],
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "dist"
+        }
+      }
     ]
   }
