--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "fabric": "^5.3.0",
     "html2canvas": "^1.4.1",
     "openai": "^3.3.0",
