--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "openai": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-image-crop": "^11.0.7"
+    "react-image-crop": "^11.0.7",
+    "swiper": "^11.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
