--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "openai": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-image-crop": "^11.0.7",
     "swiper": "^11.2.3"
   },
